# ariadne-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
ariadne_demo/: app.py  database.py  schema.py  subscriptions.py  type_defs.py
ariadne_demo/posts/: resolvers.py
ariadne_demo/users/: resolvers.py
