[tool.poetry]
name = "ariadne-demo"
version = "0.2.0"
description = "Demo GraphQL app with Ariadne"
authors = ["Marcin Gębala <maarcin.gebala@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
ariadne = "^0.23.0"
fastapi = "^0.115.3"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
packaging = "^24.1"
pyexpect = "^1.0.22"
ipython = "^8.28.0"
ruff = "^0.7.0"
